# cengine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.ai/: build-and-test.md
.ai/decisions/: 0001-modular-core-vs-modules.md  0002-criterio-de-promocao-anti-deposito.md  0003-consumidores-estacionados-documentacao-viva.md
.ai/task/: 01-add-override.md  02-fix-inverted-names.md  03-namespace.md  04-const-and-logging.md  05a-restructure-modules.md  05b-redesign-irouter.md  06-scene-lifetime.md  07-cpp-standard.md  08-presets-and-ci.md  09-code-hygiene.md  10-typed-states.md  11-documentation.md  13-router-repository-responsibilities.md  14-time-in-the-loop.md  15-hosted-loop-mode.md  16-window-present-hook.md  17-collision2d-detection.md  18-scene-stack-overlays.md  19-flow-router-facade.md  20-input-vocabulary-port.md  22-collision2d-resolution.md  23-camera-viewport.md  24-audio-port.md  25-sprite-animation-clip.md  README.md
.cache/clangd/index/: EngineManager.cpp.5EB8AE9D1A49B9A3.idx  GameManager.cpp.88417B4E4045572A.idx  IScene.hpp.55ABD08D2750D3FC.idx  RouterService.cpp.65AE1520AC01C910.idx  RouterService.hpp.1791BE47B7482C4D.idx  SceneRepository.cpp.DED151E1CEBC00C9.idx  SceneRepository.hpp.8924BA2C2471C0DE.idx
.github/workflows/: ci.yml
core/: CMakeLists.txt
core/include/cengine/core/: EngineManager.hpp  IGameManager.hpp  IScene.hpp  IWindowManager.hpp  Time.hpp
core/src/: EngineManager.cpp
include/engine/: EngineManager.hpp  GameManager.hpp  IGameManager.hpp  IScene.hpp  IState.hpp  IWindowManager.hpp
modules/anim/: CMakeLists.txt
modules/anim/include/cengine/anim/: Animator.hpp
modules/anim/src/: Animator.cpp
modules/audio/: CMakeLists.txt
modules/audio/include/cengine/audio/: Player.hpp
modules/camera2d/: CMakeLists.txt
modules/camera2d/include/cengine/camera2d/: Viewport.hpp
modules/camera2d/src/: Viewport.cpp
modules/collision2d/: CMakeLists.txt
modules/collision2d/include/cengine/collision2d/: Intersects.hpp  Shapes.hpp
modules/collision2d/src/: Intersects.cpp
modules/input/: CMakeLists.txt
modules/input/include/cengine/input/: Key.hpp  Keyboard.hpp
modules/input/src/: Keyboard.cpp
modules/routing/: CMakeLists.txt
modules/routing/include/cengine/routing/: GameManager.hpp  IRouter.hpp  ISceneRepository.hpp  IState.hpp  RouterInMemory.hpp  SceneRepository.hpp  StateCodes.hpp
modules/routing/src/: GameManager.cpp  RouterInMemory.cpp  SceneRepository.cpp
src/main/engine/: EngineManager.cpp  EngineManager.hpp  GameManager.cpp  GameManager.hpp  TestLibC.cpp  TestLibC.hpp
src/main/engine/service/: IRouter.hpp  RouterService.cpp  RouterService.hpp
src/main/engine/service/impl/: RouterInMemory.cpp  RouterInMemory.hpp
src/main/engine/service/repository/: ISceneRepository.hpp  SceneRepository.cpp  SceneRepository.hpp
src/test/: CMakeLists.txt  README.md
src/test/engine/service/: RouterServiceTest.cpp
src/test/engine/service/repository/: SceneRepositoryTest.cpp
src/test/integration/: EngineManagerIntegrationTest.cpp  FakeImplementations.hpp
src/test/unit/engine/: EngineManagerTest.cpp  GameManagerTest.cpp
src/test/unit/engine/service/impl/: RouterInMemoryTest.cpp
src/test/unit/engine/service/repository/: SceneRepositoryTest.cpp
src/test/unit/mock/: MockGameManager.hpp  MockRouter.hpp  MockScene.hpp  MockSceneRepository.hpp  MockState.hpp  MockWindowManager.hpp
tests/: CMakeLists.txt  README.md
tests/anim/: AnimatorTest.cpp
tests/audio/: PlayerTest.cpp
tests/camera2d/: ViewportTest.cpp
tests/collision2d/: IntersectsTest.cpp
tests/core/: EngineManagerTest.cpp
tests/core/integration/: EngineManagerIntegrationTest.cpp  FakeImplementations.hpp
tests/input/: KeyboardTest.cpp
tests/mock/: FakeState.hpp  MockGameManager.hpp  MockRouter.hpp  MockScene.hpp  MockSceneRepository.hpp  MockState.hpp  MockWindowManager.hpp
tests/routing/: GameManagerTest.cpp  RouterInMemoryTest.cpp  SceneRepositoryTest.cpp
tests/routing/integration/: SceneLifetimeTest.cpp
